k8s/kv-novnc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kv-novnc
  name: kv-novnc
  namespace: kubevirt
spec:
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    app: kv-novnc
  type: ClusterIP
---
# Create Traefik MiddleWare with reference to secret above
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mware-kv-novnc
  namespace: traefik
spec:
  basicAuth:
    removeHeader: true
    secret: kv-novnc-basic-auth
---
# Create Traefik IngressRoute
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-kv-novnc
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`kv-novnc.localhost`)"    # Set desired hostname
      kind: Rule
      middlewares:
        - name: mware-kv-novnc
      services:
        - name: kv-novnc
          port: 8001
  tls:
    certResolver: default
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kv-novnc
  namespace: kubevirt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kv-novnc
  template:
    metadata:
      labels:
        app: kv-novnc
    spec:
      serviceAccountName: kv-novnc
      nodeSelector:
        node-role.kubernetes.io/master: ''
      tolerations: 
      - key: "node-role.kubernetes.io/master"
        operator: "Equal"
        value: ""
        effect: "NoSchedule"
      containers:
      - name: kv-novnc
        image: ghcr.io/scog/kubevirt-novnc:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            port: 8001
            path: /
            scheme: HTTP
          failureThreshold: 30
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
